# flutter_plugins

./: .gitignore
cipher_core/: .gitignore  README.md  pubspec.yaml
cipher_core/android/: build.gradle  settings.gradle
cipher_core/example/: README.md  pubspec.yaml
cipher_core/example/integration_test/: plugin_integration_test.dart
cipher_core/example/lib/: main.dart
cipher_core/example/test/: widget_test.dart
cipher_core/ios/: cipher_core.podspec
cipher_core/ios/Classes/: CipherCorePlugin.swift
cipher_core/lib/: cipher_core.dart  cipher_core_method_channel.dart  cipher_core_platform_interface.dart
cipher_core/lib/bindings/: binding.dart  client.dart
cipher_core/lib/generated_bindings.dart/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
cipher_core/rust/: Cargo.toml
cipher_core/rust/src/: frb_generated.rs  lib.rs
cipher_core/scripts/: build_android.ps1  build_ios.sh
cipher_core/test/: cipher_core_method_channel_test.dart  cipher_core_test.dart
flutter_rust_http/: pubspec.yaml
flutter_rust_http/android/: build.gradle
flutter_rust_http/example/integration_test/: plugin_integration_test.dart
flutter_rust_http/ios/: flutter_rust_http.podspec
flutter_rust_http/lib/: flutter_rust_http_method_channel.dart  flutter_rust_http_web.dart  image_ffi.dart
flutter_rust_http/lib/generated_bindings.dart/: frb_generated.dart  frb_generated.io.dart  image_manipulation.freezed.dart  (+1 more)
flutter_rust_http/linux/: flutter_rust_http_plugin_private.h
flutter_rust_http/macos/: flutter_rust_http.podspec
flutter_rust_http/rust/: Cargo.toml
flutter_rust_http/rust/src/: image_manipulation.rs
flutter_rust_http/scripts/: build_ios.sh
flutter_rust_http/test/: flutter_rust_http_method_channel_test.dart  flutter_rust_http_test.dart
flutter_rust_http/windows/: CMakeLists.txt  flutter_rust_http_plugin_c_api.cpp
image-ffi/: analysis_options.yaml
image-ffi/example/: pubspec.yaml
image-ffi/lib/: flutter_rust_http_platform_interface.dart
image-ffi/linux/: CMakeLists.txt  flutter_rust_http_plugin.cc
image-ffi/rust/: build.rs  flutter_rust_bridge.yaml
image-ffi/scripts/: build_android.ps1
image-ffi/windows/: flutter_rust_http_plugin.cpp  flutter_rust_http_plugin.h
package/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
package/logs/: HEAD
package/refs/: stash
(+58 files in other folders)
