[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
flutter_rust_bridge = "=2.11.1"
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.6"
rand = "0.10.0"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
debug = false
overflow-checks = false  # No runtime integer overflow checks
lto = "fat"           # Full link-time optimization (best performance)
codegen-units = 1      # Single codegen unit for best optimization
strip = true           # Strip symbols & debuginfo for smaller, faster code
panic = "abort"        # Abort quickly on panic (no unwind overhead)

[profile.release-android]
inherits = "release"

[profile.release-ios]
inherits = "release"


[target.'cfg(target_arch = "aarch64")'.dependencies]
